<resources>
    <string name="app_name">CotaCar2</string>
    <string name="action_settings">Settings</string>
    <string name="cota">lay</string>
    <string name="Carro">Carro</string>
    <string name="cotacoes">Cotações</string>
    <string name="clientes">Clientes</string>
    <string name="carros">Carros</string>
    <string name="perfil">Perfil</string>
    <string name="title_activity_carros">Carros</string>
    <string name="title_activity_perfil">Perfil</string>
</resources>
