<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity"
    android:scrollIndicators="end">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/car1"
            android:layout_weight="1"
            android:longClickable="false"
            android:contentDescription="@string/Carro" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cotacoes"
                android:id="@+id/botaoCotaco"
                android:layout_marginTop="0dp"
                android:clickable="true"
                android:textColor="#123988"
                android:textStyle="bold"
                android:shadowColor="#a5bade" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clientes"
                android:id="@+id/botaoClientes"
                android:clickable="true"
                android:textColor="#123988"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carros"
                android:id="@+id/botaoCarros"
                android:textColor="#123988"
                android:textStyle="bold"
                android:allowUndo="false"
                android:onClick="showCarros" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perfil"
                android:id="@+id/botaoPerfil"
                android:textColor="#123988"
                android:textStyle="bold"
                android:onClick="showPerfil"
                />
        </TableLayout>

    </TableLayout>

</RelativeLayout>